# Ranger-Beta

./: .gitignore  AIResponses.md  CMakeLists.txt  README.md  Ranger-Beta.code-workspace  main.cpp
examples/: readme.md
examples/basic_app/: CMakeLists.txt  gameapp.cpp  main.cpp
examples/basic_app/includes/: basic_scene_node.hpp  gameapp.hpp
examples/basic_app/nodes/: basic_scene_node.cpp
examples/basic_font/: CMakeLists.txt  darkrose_bitmap_font.cpp  gameapp.cpp  main.cpp  readme.md
examples/basic_font/includes/: basic_scene_node.hpp  darkrose_bitmap_font.hpp  gameapp.hpp
examples/basic_font/nodes/: square_node.cpp
examples/basic_node/: CMakeLists.txt  darkrose_bitmap_font.cpp  gameapp.cpp  main.cpp
examples/basic_node/includes/: basic_scene_node.hpp  darkrose_bitmap_font.hpp  gameapp.hpp  square_node.hpp
examples/basic_node/nodes/: basic_scene_node.cpp  square_node.cpp
examples/basic_triangle/: CMakeLists.txt  gameapp.cpp  gameapp.hpp  main.cpp
examples/basic_vector_font/: CMakeLists.txt  darkrose_bitmap_font.cpp  game_environment.cpp  gameapp.cpp  main.cpp  readme.md  simple_square.cpp  simple_triangle.cpp
examples/basic_vector_font/includes/: basic_scene_node.hpp  gameapp.hpp  simple_square.hpp  simple_triangle.hpp
examples/basic_vector_font/nodes/: basic_scene_node.cpp
examples/basic_window/: CMakeLists.txt  main.cpp
examples/common/: CMakeLists.txt
examples/common/assets/fonts/bitmaps/: dark_rose.hpp  maxtrix_orbital.hpp
examples/common/assets/fonts/vectors/: basic_vector_font.hpp
examples/common/assets/shaders/: basic.vs  mono_vert_ubo.glsl  mono_vertex.glsl  particle_fragment.glsl  particle_fragment_smooth.glsl  particle_fragment_smooth2.glsl  particle_vertex.glsl  readme.md  trivial_fragment.glsl  trivial_vertex.glsl
examples/common/includes/: app.hpp  color4.hpp  primitive_ebo_test.hpp  ubo_buffer.hpp
examples/common/src/: app.cpp  color4.cpp  primitive_ebo_test.cpp  ubo_buffer.cpp
examples/dependencies/glad/include/: glad.h
examples/dependencies/glad/src/: glad.c
examples/simple_shader/: CMakeLists.txt  main.cpp  simple_triangle.cpp  simple_triangle.hpp
examples/simple_ubo/: CMakeLists.txt  main.cpp  misc.cpp  misc.hpp  simple_ubo.cpp  simple_ubo.hpp
src/: CMakeLists.txt  engine.cpp  main.cpp
src/core/: CMakeLists.txt  constants.cpp  environment.cpp  io_event.cpp
src/core/extras/: CMakeLists.txt  basic_vector_font.hpp  bitmap_font_base.cpp  camera.cpp  char_vectors.cpp  delay.cpp  drag_state.cpp  ortho_projection.cpp  vector_font.cpp  viewport.cpp  zoom_node.cpp
src/core/geometry/: CMakeLists.txt  rectangle.cpp
src/core/global_data/: CMakeLists.txt  global_data.cpp
src/core/graph/: CMakeLists.txt  constants.cpp  group.cpp  node.cpp  node_manager.cpp  transform.cpp  transform_stack.cpp
src/core/maths/: CMakeLists.txt  affinetransform.cpp  matrix4.cpp  vector2d.cpp  vector3.cpp  zoom_transform.cpp
src/core/rendering/: CMakeLists.txt  atlas.cpp  color.cpp  color4.cpp
src/core/rendering/gl_objects/: CMakeLists.txt  ebo.cpp  mesh.cpp  vao.cpp  vbo.cpp
src/core/rendering/shaders/: CMakeLists.txt  basic.frag  basic_mvp.vs  basic_shader.cpp  shader.cpp
src/core/rendering/vectors/: CMakeLists.txt  atlas.cpp  base_atlas.cpp  bitmap_font_atlas.cpp  bitmap_vector_font_atlas.cpp  darkrose_bitmap_font.cpp  dynamic_mono_atlas.cpp  particle_font_atlas.cpp  shape.cpp  shape_generator.cpp  shapes_atlas.cpp  static_mono_atlas.cpp  uniform_atlas.cpp  vector_atlas.cpp  vector_font_atlas.cpp  vector_object.cpp  vector_shape.cpp  vector_uniform_atlas.cpp  vector_vector_font_atlas.cpp
src/includes/: affinetransform.hpp  atlas.hpp  base_atlas.hpp  basic_shader.hpp  basic_vector_font.hpp  bitmap_font_atlas.hpp  bitmap_font_base.hpp  bitmap_vector_font_atlas.hpp  camera.hpp  camera_matrices.hpp  char_vectors.hpp  color.hpp  color4.hpp  constants.hpp  dark_rose.hpp  darkrose_bitmap_font.hpp  delay.hpp  drag_state.hpp  dynamic_mono_atlas.hpp  ebo.hpp  environment.hpp  game_environment.hpp  global_data.hpp  group.hpp  io_event.hpp  matrix4.hpp  mesh.hpp  node.hpp  node_manager.hpp  ortho_projection.hpp  particle_font_atlas.hpp  point.cpp  print_tree.hpp  rectangle.hpp  shader.hpp  shape.hpp  shape_generator.hpp  shapes_atlas.hpp  spaces.hpp  static_mono_atlas.hpp  (+18 more)
test/: CMakeLists.txt  affinetransform_tests.cpp  helpers.cpp  matrix4_tests.cpp  node_manager_tests.cpp  node_tests.cpp  readme.md  rectangle_tests.cpp  spaces_tests.cpp  transform_stack_tests.cpp  unit_tests.cpp  vector_font_tests.cpp  vector_test.cpp  vector_tests.cpp
